STIJ-31: Fixed wrapping of radio and checkbox labels.

--- a/components/31-molecules/fields/_fields.scss
+++ b/components/31-molecules/fields/_fields.scss
@@ -82,6 +82,7 @@ label {
   .label-optional {
     font-size: .8rem;
     font-weight: normal;
+    margin-left: .31rem;
   }
 }
 
@@ -92,11 +93,13 @@ input + .description {
 // Radios and checkboxes shouldn't start on a new line.
 input[type='radio'],
 input[type='checkbox'] {
+  margin: .4rem .4rem 0 0;
+  float: left;
   outline: none;
 
   + label {
-    display: inline-block;
-    margin: 0 0 .5rem;
+    display: block;
+    overflow: auto;
   }
 }
 
